Updated logos Fixed UI alignments

--- a/src/app/layout/components/sidebar/sidebar.component.scss
+++ b/src/app/layout/components/sidebar/sidebar.component.scss
@@ -1,4 +1,4 @@
-$topnav-background-color: midnightblue;
+$topnav-background-color: #202084;
 .sidebar {
     border-radius: 0;
     position: fixed;
