--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -1,4 +1,4 @@
-$topnav-background-color: midnightblue;
+$topnav-background-color: #202084;
 :host {
     display: block;
 }
